@@ -70,12 +70,18 @@ returns
 {
     unsigned int i;
 
-    if (n <= 1) return 0;
-    if (n > 2 && n % 2 == 0) return 0;
+    if (n <= 1) {
+        return 0;
+    }
+    if (n > 2 && n % 2 == 0) {
+        return 0;
+    }
 
     i = 3;
     while (i * i <= n && i < 0x10000) {
-        if (n % i == 0) return 0;
+        if (n % i == 0) {
+            return 0;
+        }
         i += 2;
     }
     return 1;
@@ -90,22 +96,34 @@ returns 1 if the assignment is within the supported bounds of mfaktc,
     int ret = 1;
 
     // clang-format off
-        if (exp < 100000 )      { ret = 0; if (verbosity >= 1) printf("Warning: exponents < 100000 are not currently supported.\n"); }
-   else if (!isprime(exp))      { ret = 0; if (verbosity >= 1) printf("Warning: exponent is not prime.\n"); }
-   else if (bit_min < 1 )       { ret = 0; if (verbosity >= 1) printf("Warning: bit_min < 1 doesn't make sense!\n"); }
-   else if (bit_min > 94)       { ret = 0; if (verbosity >= 1) printf("Warning: bit_min > 94 is not currently supported.\n"); }
-   else if (bit_min >= bit_max) { ret = 0; if (verbosity >= 1) printf("Warning: bit_min >= bit_max doesn't make sense!\n"); }
-   else if (bit_max > 95)       { ret = 0; if (verbosity >= 1) printf("Warning: bit_max > 95 is not currently supported.\n"); }
-   else if (((double)(bit_max-1) - (log((double)exp) / log(2.0F))) > 63.9F) /* this leave enough room so k_min/k_max won't overflow in tf_XX() */
-                                { ret = 0; if (verbosity >= 1) printf("Warning: k_max > 2^63.9 is not currently supported.\n"); }
-     // clang-format on
-     if (verbosity >= 1 && ret == 0) printf("         Assignment skipped: TF %s%u from 2^%d to 2^%d.\n", NAME_NUMBERS, exp, bit_min, bit_max);
-
+         if (exp < 100000 )      { ret = 0; if (verbosity >= 1) printf("Warning: exponents < 100000 are not currently supported.\n"); }
+    else if (!isprime(exp))      { ret = 0; if (verbosity >= 1) printf("Warning: exponent is not prime.\n"); }
+    else if (bit_min < 1 )       { ret = 0; if (verbosity >= 1) printf("Warning: bit_min < 1 doesn't make sense!\n"); }
+    else if (bit_min > 94)       { ret = 0; if (verbosity >= 1) printf("Warning: bit_min > 94 is not currently supported.\n"); }
+    else if (bit_min >= bit_max) { ret = 0; if (verbosity >= 1) printf("Warning: bit_min >= bit_max doesn't make sense!\n"); }
+    else if (bit_max > 95)       { ret = 0; if (verbosity >= 1) printf("Warning: bit_max > 95 is not currently supported.\n"); }
+    else if (((double)(bit_max - 1) - (log((double)exp) / log(2.0F))) > 63.9F) /* this leaves enough room so k_min/k_max won't overflow in tf_XX() */
+                                 { ret = 0; if (verbosity >= 1) printf("Warning: k_max > 2^63.9 is not currently supported.\n"); }
+    // clang-format on
+    if (verbosity >= 1 && ret == 0) {
+        printf("         Assignment skipped: TF %s%u from 2^%d to 2^%d.\n", NAME_NUMBERS, exp, bit_min, bit_max);
+    }
 
     return ret;
 }
 
-enum PARSE_WARNINGS { NO_WARNING = 0, END_OF_FILE, LONG_LINE, NO_FACTOR_EQUAL, INVALID_FORMAT, INVALID_DATA, BLANK_LINE, NONBLANK_LINE };
+enum PARSE_WARNINGS {
+    // clang-format off
+    NO_WARNING = 0,
+    END_OF_FILE,
+    LONG_LINE,
+    NO_FACTOR_EQUAL,
+    INVALID_FORMAT,
+    INVALID_DATA,
+    BLANK_LINE,
+    NONBLANK_LINE
+    // clang-format on
+};
 
 // note:  parse_worktodo_line() is a function that
 //	returns the text of the line, the assignment data structure, and a success code.
@@ -132,14 +150,16 @@ output
     if (NULL == fgets(line, MAX_LINE_LENGTH + 1, f_in)) {
         return END_OF_FILE;
     }
-    if (linecopy != NULL) // maybe it wasn't needed....
-        strcpy(*linecopy, line); // this is what was read...
-    if ((strlen(line) == MAX_LINE_LENGTH) && (!feof(f_in)) && (line[strlen(line) - 1] != '\n')) // long lines disallowed,
+    // maybe it wasn't needed....
+    if (linecopy != NULL) {
+        strcpy(*linecopy, line);    // this is what was read...
+    }
+    if (strlen(line) == MAX_LINE_LENGTH && !feof(f_in) && line[strlen(line) - 1] != '\n') // long lines disallowed
     {
         reason = LONG_LINE;
         do {
             c = fgetc(f_in);
-            if ((EOF == c) || (iscntrl(c))) // found end of line
+            if (EOF == c || iscntrl(c)) // found end of line
                 break;
         } while (TRUE);
     }
@@ -147,28 +167,40 @@ output
     if (linecopy != NULL) *endptr = *linecopy; // by default, non-significant content is whole line
 
     ptr = line;
-    while (('\0' != ptr[0]) && isspace(ptr[0])) // skip leading spaces
+    while ('\0' != ptr[0] && isspace(ptr[0])) { // skip leading spaces
         ptr++;
+    }
     if ('\0' == ptr[0]) // blank line...
+    {
         return BLANK_LINE;
-    if (('\\' == ptr[0]) && ('\\' == ptr[1])) return NONBLANK_LINE; // it's a comment, so ignore....don't care about long lines either..
-    if (('/' == ptr[0]) && ('/' == ptr[1])) return NONBLANK_LINE; // it's a comment, so ignore....don't care about long lines either..
-    if (strncasecmp("Factor=", ptr, 7) != 0) // does the line start with "Factor="? (case-insensitive)
+    }
+    if (('\\' == ptr[0] && '\\' == ptr[1]) || ('/' == ptr[0] && '/' == ptr[1])) {
+        return NONBLANK_LINE;   // it's a comment, so ignore....don't care about long lines either..
+    }
+    if (strncasecmp("Factor=", ptr, 7) != 0) {      // does the line start with "Factor="? (case-insensitive)
         return NO_FACTOR_EQUAL;
+    }
     ptr = 1 + strstr(ptr, "="); // don't rescan..
-    while (('\0' != ptr[0]) && isspace(ptr[0])) // ignore blanks...
+    while ('\0' != ptr[0] && isspace(ptr[0])) {   // ignore blanks...
         ptr++;
+    }
     number_of_commas = 0;
     for (scanpos = 0; scanpos < strlen(ptr); scanpos++) {
-        if (ptr[scanpos] == ',') number_of_commas++; // count the number of ',' in the line
-        if ((ptr[scanpos] == '\\') && (ptr[scanpos + 1] == '\\')) break; // comment delimiter
-        if ((ptr[scanpos] == '/') && (ptr[scanpos + 1] == '/')) break; // //comment delimiter
+        // count the number of ',' in the line
+        if (ptr[scanpos] == ',') {
+            number_of_commas++;
+        }
+        if ((ptr[scanpos] == '\\' && ptr[scanpos + 1] == '\\') || (ptr[scanpos] == '/' && ptr[scanpos + 1] == '/')) {
+            break;  // comment delimiter
+        }
     }
-    if ((2 != number_of_commas) && (3 != number_of_commas)) // must have 2 or 3 commas...
+    if (2 != number_of_commas && 3 != number_of_commas) { // must have 2 or 3 commas...
         return INVALID_FORMAT;
+    }
 
-    if (2 == number_of_commas)
+    if (2 == number_of_commas) {
         assignment->assignment_key[0] = '\0';
+    }
     else {
         strncpy(assignment->assignment_key, ptr, 1 + (strstr(ptr, ",") - ptr)); // copy the comma..
         *strstr(assignment->assignment_key, ",") = '\0'; // null-terminate key
@@ -176,38 +208,58 @@ output
     }
     // ptr now points at exponent...in the future, the expression....
     ptr_start = ptr;
-    while ((isspace(*ptr_start)) && ('\0' != *ptr_start))
+    while ((isspace(*ptr_start)) && ('\0' != *ptr_start)) {
         ptr_start++;
-    if ('M' == *ptr_start) // M means Mersenne exponent...
+    }
+    if ('M' == *ptr_start) { // M means Mersenne exponent...
         ptr_start++;
+    }
     errno             = 0;
     proposed_exponent = strtoul(ptr_start, &ptr_end, 10);
-    if (ptr_start == ptr_end) return INVALID_FORMAT; // no conversion
-    if ((0 != errno) || (proposed_exponent > UINT_MAX)) return INVALID_DATA; // for example, too many digits.
+    if (ptr_start == ptr_end) {
+        return INVALID_FORMAT;  // no conversion
+    }
+    if (0 != errno || proposed_exponent > UINT_MAX) {
+        return INVALID_DATA;    // for example, too many digits.
+    }
     ptr = ptr_end;
 
     // ptr now points at bit_min
     ptr_start        = 1 + strstr(ptr, ",");
     errno            = 0;
     proposed_bit_min = strtoul(ptr_start, &ptr_end, 10);
-    if (ptr_start == ptr_end) return INVALID_FORMAT;
-    if ((0 != errno) || (proposed_bit_min > UCHAR_MAX)) return INVALID_DATA;
+    if (ptr_start == ptr_end) {
+        return INVALID_FORMAT;
+    }
+    if (0 != errno || proposed_bit_min > UCHAR_MAX) {
+        return INVALID_DATA;
+    }
     ptr = ptr_end;
 
     // ptr now points at bit_max
     ptr_start        = 1 + strstr(ptr, ",");
     errno            = 0;
     proposed_bit_max = strtoul(ptr_start, &ptr_end, 10);
-    if (ptr_start == ptr_end) return INVALID_FORMAT;
-    if ((0 != errno) || (proposed_bit_max > UCHAR_MAX) || (proposed_bit_max <= proposed_bit_min)) return INVALID_DATA;
+    if (ptr_start == ptr_end) {
+        return INVALID_FORMAT;
+    }
+    if (0 != errno || proposed_bit_max > UCHAR_MAX || proposed_bit_max <= proposed_bit_min) {
+        return INVALID_DATA;
+    }
     ptr = ptr_end;
-    while (('\0' != ptr[0]) && isspace(ptr[0])) // ignore blanks...
+    while ('\0' != ptr[0] && isspace(ptr[0])) { // ignore blanks...
         ptr++;
-    if (NULL != strstr(ptr, "\n")) // kill off any trailing newlines...
+    }
+    if (NULL != strstr(ptr, "\n")) { // kill off any trailing newlines...
         *strstr(ptr, "\n") = '\0';
-    if (*ptr != '\0') strcpy(assignment->comment, ptr);
+    }
+    if (*ptr != '\0') {
+        strcpy(assignment->comment, ptr);
+    }
 
-    if (linecopy != NULL) *endptr = *linecopy + (ptr_end - line);
+    if (linecopy != NULL) {
+        *endptr = *linecopy + (ptr_end - line);
+    }
 
     assignment->exponent = proposed_exponent;
     assignment->bit_min  = proposed_bit_min;
@@ -249,15 +301,21 @@ enum ASSIGNMENT_ERRORS get_next_assignment(char *filename, unsigned int *exponen
     do {
         linecount++;
         value = parse_worktodo_line(f_in, &assignment, &line, &tail);
-        if ((BLANK_LINE == value) || (NONBLANK_LINE == value)) continue;
+        if (BLANK_LINE == value || NONBLANK_LINE == value) {
+            continue;
+        }
         if (NO_WARNING == value) {
-            if (valid_assignment(assignment.exponent, assignment.bit_min, assignment.bit_max, verbosity)) break;
+            if (valid_assignment(assignment.exponent, assignment.bit_min, assignment.bit_max, verbosity)) {
+                break;
+            }
             value = INVALID_DATA;
         }
 
-        if (END_OF_FILE == value) break;
+        if (END_OF_FILE == value) {
+            break;
+        }
         if (verbosity >= 1) {
-            printf("Warning: ignoring line %u in \"%s\"! Reason: ", linecount, filename);
+            printf("Warning: line %u in \"%s\" not processed. Reason: ", linecount, filename);
             switch (value) {
             case LONG_LINE:
                 printf("line is too long\n");
@@ -288,11 +346,14 @@ enum ASSIGNMENT_ERRORS get_next_assignment(char *filename, unsigned int *exponen
         *bit_min  = assignment.bit_min;
         *bit_max  = assignment.bit_max;
 
-        if (key != NULL) strcpy(*key, assignment.assignment_key);
+        if (key != NULL) {
+            strcpy(*key, assignment.assignment_key);
+        }
 
         return OK;
-    } else
+    } else {
         return VALID_ASSIGNMENT_NOT_FOUND;
+    }
 }
 
 /************************************************************************************************************
@@ -326,7 +387,9 @@ enum ASSIGNMENT_ERRORS clear_assignment(char *filename, unsigned int exponent, i
     struct ASSIGNMENT assignment; // the found assignment....
 
     f_in = fopen(filename, "r");
-    if (NULL == f_in) return CANT_OPEN_WORKFILE;
+    if (NULL == f_in) {
+        return CANT_OPEN_WORKFILE;
+    }
 
     f_out = fopen("__worktodo__.tmp", "w");
     if (NULL == f_out) {
@@ -342,15 +405,15 @@ enum ASSIGNMENT_ERRORS clear_assignment(char *filename, unsigned int exponent, i
         while (END_OF_FILE != (value = parse_worktodo_line(f_in, &assignment, &line, &tail))) {
             current_line++;
             if (NO_WARNING == value) {
-                if ((exponent == assignment.exponent) && (bit_min == assignment.bit_min) &&
-                    (bit_max == assignment.bit_max)) // make final decision
+                if (exponent == assignment.exponent && bit_min == assignment.bit_min &&
+                    bit_max == assignment.bit_max) // make final decision
                 {
                     if (line_to_drop > current_line) line_to_drop = current_line;
                     break;
                 } else {
                     line_to_drop = current_line + 1; // found different assignment, can drop no earlier than next line
                 }
-            } else if ((BLANK_LINE == value) && (UINT_MAX == line_to_drop))
+            } else if (BLANK_LINE == value && UINT_MAX == line_to_drop)
                 line_to_drop = current_line + 1;
         }
     }
@@ -371,20 +434,26 @@ enum ASSIGNMENT_ERRORS clear_assignment(char *filename, unsigned int exponent, i
     current_line = 0;
     while (END_OF_FILE != (value = parse_worktodo_line(f_in, &assignment, &line, &tail))) {
         current_line++;
-        if ((NO_WARNING != value) || found) {
-            if ((found) || (current_line < line_to_drop)) fprintf(f_out, "%s", line);
+        if (NO_WARNING != value || found) {
+            if (found || current_line < line_to_drop) {
+                fprintf(f_out, "%s", line);
+            }
         } else // assignment on the line, so we may need to print it..
         {
-            found = ((exponent == assignment.exponent) && (bit_min == assignment.bit_min) && (bit_max == assignment.bit_max));
+            found = (exponent == assignment.exponent && bit_min == assignment.bit_min && bit_max == assignment.bit_max);
             if (!found) {
                 fprintf(f_out, "%s", line);
             } else // we have the assignment...
             {
-                if ((bit_min_new > bit_min) && (bit_min_new < bit_max)) {
+                if (bit_min_new > bit_min && bit_min_new < bit_max) {
                     fprintf(f_out, "Factor=");
-                    if (strlen(assignment.assignment_key) != 0) fprintf(f_out, "%s,", assignment.assignment_key);
+                    if (strlen(assignment.assignment_key) != 0) {
+                        fprintf(f_out, "%s,", assignment.assignment_key);
+                    }
                     fprintf(f_out, "%u,%u,%u", exponent, bit_min_new, bit_max);
-                    if (tail != NULL) fprintf(f_out, "%s", tail);
+                    if (tail != NULL) {
+                        fprintf(f_out, "%s", tail);
+                    }
                 }
             }
         }
@@ -393,9 +462,15 @@ enum ASSIGNMENT_ERRORS clear_assignment(char *filename, unsigned int exponent, i
     f_in = NULL;
     fclose(f_out);
     f_out = NULL;
-    if (!found) return ASSIGNMENT_NOT_FOUND;
-    if (remove(filename) != 0) return CANT_RENAME;
-    if (rename("__worktodo__.tmp", filename) != 0) return CANT_RENAME;
+    if (!found) {
+        return ASSIGNMENT_NOT_FOUND;
+    }
+    if (remove(filename) != 0) {
+        return CANT_RENAME;
+    }
+    if (rename("__worktodo__.tmp", filename) != 0) {
+        return CANT_RENAME;
+    }
     return OK;
 }
 
@@ -405,7 +480,9 @@ int process_add_file(char *workfilename, char *addfilename, int *addfilesstatus,
     char buffer[512];
     size_t n;
 
-    if (verbosity >= 2) printf("checking for \"%s\"... ", addfilename);
+    if (verbosity >= 2) {
+        printf("checking for \"%s\"... ", addfilename);
+    }
 
     addfile = fopen(addfilename, "r");
     if (addfile == NULL) {
@@ -423,7 +500,7 @@ int process_add_file(char *workfilename, char *addfilename, int *addfilesstatus,
                 fclose(addfile);
                 addfile = NULL;
                 printf("Warning: process_add_file() could not open \"%s\"", workfilename);
-                printf("         Disabled worktodo.add feature until restart of mfaktc!\n");
+                printf("         Disabled worktodo.add feature until mfaktc is restarted.\n");
                 return CANT_OPEN_WORKFILE;
             } else {
                 while ((n = fread(buffer, 1, sizeof buffer, addfile)) > 0) {
@@ -433,7 +510,7 @@ int process_add_file(char *workfilename, char *addfilename, int *addfilesstatus,
                         fclose(addfile);
                         addfile = NULL;
                         printf("Warning: process_add_file() could not write to \"%s\"", workfilename);
-                        printf("         Disabled worktodo.add feature until restart of mfaktc!\n");
+                        printf("         Disabled worktodo.add feature until mfaktc is restarted.\n");
                         return CANT_WRITE;
                     }
                 }
@@ -443,7 +520,7 @@ int process_add_file(char *workfilename, char *addfilename, int *addfilesstatus,
                     fclose(addfile);
                     addfile = NULL;
                     printf("Warning: process_add_file() could not read from \"%s\"", addfilename);
-                    printf("         Disabled worktodo.add feature until restart of mfaktc!\n");
+                    printf("         Disabled worktodo.add feature until mfaktc is restarted.\n");
                     return CANT_READ;
                 }
                 fclose(workfile);
@@ -451,15 +528,17 @@ int process_add_file(char *workfilename, char *addfilename, int *addfilesstatus,
             }
         } else // (*addfilesstatus) < 2
         {
-            if (verbosity >= 2) printf("  -> will wait until next check of \"%s\"\n", addfilename);
+            if (verbosity >= 2) {
+                printf("  -> will wait until next check of \"%s\"\n", addfilename);
+            }
         }
         fclose(addfile);
         addfile = NULL;
-        if ((*addfilesstatus) == 0) /* status was 2 before and is 0 now, try to delete addfile! */
+        if (*addfilesstatus == 0) /* status was 2 before and is 0 now, try to delete addfile! */
         {
             if (remove(addfilename) != 0) {
-                printf("Warning: process_add_file() could delete \"%s\"", addfilename);
-                printf("         Disabled worktodo.add feature until restart of mfaktc!\n");
+                printf("Warning: process_add_file() could not delete \"%s\"", addfilename);
+                printf("         Disabled worktodo.add feature until mfaktc is restarted.\n");
                 return CANT_RENAME;
             }
         }
